fixed spacing jump when choices displayed

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* ****** Custom Properties ****** */
+:root {
+    --gap: 7.5em;
+}
+
 /* ****** Reset ****** */
 body, html {
     margin: 0;
@@ -32,7 +37,7 @@ h2,
 
 .choices {
     font-size: 2.75em;
-    filter: drop-shadow(3px 3px 6px #23232399)
+    filter: drop-shadow(3px 3px 6px #23232399);
 }
 
 .result-display {
@@ -51,6 +56,7 @@ h2,
 .choices-box {
     width: 50vw;
     margin: auto;
+    margin-bottom: var(--gap);
 }
 
 .choices-box {
